--- a/src/App.css
+++ b/src/App.css
@@ -72,12 +72,12 @@
   color: #fff;
   box-shadow: 10px 10px 5px lightblue !important;
 }
-/* 
+
 .theaddesign {
   background-color: #750606 !important;
   color: #fff !important;
   box-shadow: 10px 10px 5px lightblue !important;
-} */
+}
 
 
 .borderright{
