--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,11 @@
   /* background-color: #; */
 
 }
+
+.css-1qlca3z {
+  color: red !important;
+}
+
+.css-191lty2 {
+  padding-left: 52px !important;
+}
