--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,6 @@
 
 .borderright{
   border-right: 2px solid black !important;
-
 }
 
 .css-14jhzr5 {
@@ -102,14 +101,16 @@
   margin: 1px 0px !important;
   font-weight: bold !important;
   border-radius: 20px !important;
-  /* background-color: #; */
-
+  
 }
 
 .css-1qlca3z {
   color: red !important;
 }
 
-.css-191lty2 {
-  padding-left: 52px !important;
-}
+/* .rightborder .css-1l8j5k8{
+  border-right: 2px solid black !important;
+  background-color: 0px !important;
+  position: inherit;
+  border-right: 0px !important;
+} */
